# cpprestsdk4mingw

./: LICENSE  README.md  cmake.bat
Release/: CMakeLists.txt
Release/include/cpprest/: filestream.h  http_msg.h
Release/include/cpprest/details/: cpprest_compat.h
Release/samples/: CMakeLists.txt
Release/src/http/common/: http_msg.cpp
Release/src/http/listener/: http_server_asio.cpp
Release/src/json/: json_parsing.cpp  json_serialization.cpp
Release/src/streams/: fileio_posix.cpp
Release/src/utilities/: asyncrt_utils.cpp
manifest/: libcpprest_2_10d.dll.manifest
